use CMS GC option for functional tests